--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     >
 </head>
 
-<body style="background-image: url({% static 'bj01.jpg' %});background-size:110% 125%;">
+<body style="background-image: url({% static 'bj01.png' %});background-size:110% 125%;">
 
 
 
