--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,6 +2,6 @@
 <!-- Footer -->
 <footer class="py-3 bg-dark" id="footer">
     <div class="container">
-        <h5 class="m-0 text-center text-white">Copyright &copy; HerrTian.cn 2020</h5>
+        <h5 class="m-0 text-center text-white">Copyright &copy; HerrTian.top 2020</h5>
     </div>
 </footer>
